--- a/appsettings.json
+++ b/appsettings.json
@@ -3,5 +3,6 @@
   "DSUServerPort": 26760,
   "OpenTrackIp": "127.0.0.1",
   "OpenTrackPort": 4242,
-  "DebugOpenTrack": false
+  "DebugOpenTrack": false,
+  "UseRawValues": true
 }
